# McDCIR_PDC

./: CMakeLists.txt  README.md  calculator.cpp  init_vis.mac  record.txt  vis.mac
cmake/: libigl.cmake
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  ParallelMessenger.hh  ParallelPhantom.hh  PhantomAnimator.hh  PrimaryGeneratorAction.hh  PrimaryMessenger.hh  Run.hh  RunAction.hh  TETDRFScorer.hh  TETModelImport.hh  TETPSEnergyDeposit.hh  TETParameterisation.hh  functions.h
phantoms/: carm.ply  patient.ele  patient.node  patient.ply
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  ParallelMessenger.cc  ParallelPhantom.cc  PhantomAnimator.cc  PrimaryGeneratorAction.cc  PrimaryMessenger.cc  Run.cc  RunAction.cc  TETDRFScorer.cc  TETModelImport.cc  TETPSEnergyDeposit.cc  TETParameterisation.cc  TETSteppingAction.cc  functions.cc
